--- a/app.plist
+++ b/app.plist
@@ -17,7 +17,7 @@
             <key>metadata</key>
             <dict>
                 <key>bundle-identifier</key>
-                <string>com.cqyk.mm</string>
+                <string>com.cqyk.APPNAME</string>
                 <key>bundle-version</key>
                 <string>1.81</string>
                 <key>kind</key>
