--- a/app.plist
+++ b/app.plist
@@ -17,13 +17,13 @@
             <key>metadata</key>
             <dict>
                 <key>bundle-identifier</key>
-                <string>com.cqyk.APPNAME</string>
+                <string>com.cqyk.mm</string>
                 <key>bundle-version</key>
                 <string>1.81</string>
                 <key>kind</key>
                 <string>software</string>
                 <key>title</key>
-                <string>雾都麻将</string>
+                <string>游咖麻将</string>
             </dict>
         </dict>
     </array>
