--- a/app.plist
+++ b/app.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://raw.githubusercontent.com/zhougang1015/youka/master/youka_mj.ipa</string>
+                    <string>https://106.15.159.238/upload/youka_mj.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
