--- a/ddzj.plist
+++ b/ddzj.plist
@@ -23,7 +23,7 @@
                 <key>kind</key>
                 <string>software</string>
                 <key>title</key>
-                <string>µãµãÖú¼Ò</string>
+                <string>ç‚¹ç‚¹åŠ©å®¶</string>
             </dict>
         </dict>
     </array>
