--- a/ddzj.plist
+++ b/ddzj.plist
@@ -17,7 +17,7 @@
             <key>metadata</key>
             <dict>
                 <key>bundle-identifier</key>
-                <string>com.cqyk.mm</string>
+                <string>com.diandianzhujia.ddzj</string>
                 <key>bundle-version</key>
                 <string>1.0</string>
                 <key>kind</key>
